fix: set align-self start to suit firefox

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -2297,6 +2297,11 @@
       align-items: flex-end;
     }
   }
+  .lg\:self-start {
+    @media (width >= 64rem) {
+      align-self: flex-start;
+    }
+  }
   .xl\:w-1\/4 {
     @media (width >= 80rem) {
       width: calc(1/4 * 100%);
